--- a/formapagto/templates/formapagto/pages/cadastro.html
+++ b/formapagto/templates/formapagto/pages/cadastro.html
@@ -2,7 +2,11 @@
 
 <body>
     {% include 'formapagto/partials/header.html' %}    
-
+    <div class="main-content-container">
+        <div class="main-content container">
+            aaa
+        </div>
+    </div>
     
 </body>
 </html>
