--- a/formapagto/templates/formapagto/pages/cadastro.html
+++ b/formapagto/templates/formapagto/pages/cadastro.html
@@ -3,10 +3,9 @@
 <body>
     {% include 'formapagto/partials/header.html' %}    
     <div class="main-content-container">
-        <div class="main-content container">
-            aaa
-        </div>
+        <div class="main-content container">           
     </div>
+    {{name}}
     
 </body>
 </html>
