--- a/cidade/templates/cidade/pages/ConsultaCidade.html
+++ b/cidade/templates/cidade/pages/ConsultaCidade.html
@@ -5,7 +5,7 @@
     {% include 'pages/menu.html' %}
 
     <div class="main-content container consulta">           
-        <h1 class="title-list">CIDADES</h1>   
+        <h1 class="title-list"><i class="fa-solid fa-city"></i> CIDADES</h1>   
         <a href="{% url 'cadastrar-cidade' %}"><button class="btn btn-primary">Adicionar</button></a>
         <hr>        
             <table class="table table-striped">
@@ -26,7 +26,7 @@
                             <th scope="row">{{cidade.id}}</th>
                             <td>{{cidade.nm_cidade}}</td>
                             <td>{{cidade.ddd}}</td>
-                            <td>{{cidade.estado}}</td>
+                            <td>{{cidade.estado.getEstado}}</td>
                             <td>{{cidade.dt_cadastro}}</td>
                             <td>{{cidade.dt_ult_alt}}</td>
                             <td>
