--- a/estado/templates/estado/pages/ConsultaEstado.html
+++ b/estado/templates/estado/pages/ConsultaEstado.html
@@ -3,9 +3,13 @@
 <body>
 
     {% include 'pages/menu.html' %}
-
+    {% comment %} {% include 'pages/modal.html' %} {% endcomment %}
+    {% extends 'estado/pages/ModalEstado.html' %}
+    {% block modal %}
+        <h1>teste</h1>
+    {% endblock  %}
     <div class="main-content container consulta">           
-        <h1 class="title-list">ESTADOS</h1>      
+        <h1 class="title-list"><i class="fa-solid fa-map-location-dot"></i> ESTADOS</h1>      
         <a href="{% url 'cadastrar-estado' %}"><button class="btn btn-primary">Adicionar</button></a>  
         <hr>        
 
@@ -27,11 +31,11 @@
                     <th scope="row">{{estado.id}}</th>
                     <td>{{estado.nm_estado}}</td>
                     <td>{{estado.uf}}</td>
-                    <td>{{estado.pais}}</td>
+                    <td>{{estado.pais.getPais}}</td>
                     <td>{{estado.dt_cadastro}}</td>
                     <td>{{estado.dt_ult_alt}}</td>
                     <td>
-                        <a class="btn btn-sm btn-info" href="{% url 'consulta-estado' %}"><i class="fa-solid fa-eye"></i></a>
+                        <button type="button" class="btn btn-sm btn-info" data-bs-toggle="modal" data-bs-target="#myModal" data-bs-url="{% url 'estado-view' pk=estado.id %}"><i class="fa-solid fa-eye"></i></button>
                         |
                         <a class="btn btn-sm btn-secondary" href="{% url 'consulta-estado' %}"><i class="fa-solid fa-pen"></i></a>
                         |
@@ -55,5 +59,7 @@
 </body>
 
 {% include 'pages/footer.html' %}
+
+<script>{% include 'estado/partials/script.js' %}</script>
 
 </html>
