--- a/estado/templates/estado/pages/ConsultaEstado.html
+++ b/estado/templates/estado/pages/ConsultaEstado.html
@@ -1,22 +1,16 @@
-{% include 'pages/head.html' %}
+{% extends 'pages/base.html' %}
+{% block title %}Estados{% endblock %}
+{% block content %}
+<div class="main-content container consulta">
+    <h1 class="title-list"><i class="fa-solid fa-map-location-dot"></i> ESTADOS</h1>
+    <a href="{% url 'cadastrar-estado' %}"><button class="btn btn-primary">Adicionar</button></a>
+    <hr>
 
-<body>
-
-    {% include 'pages/menu.html' %}
-    {% comment %} {% include 'pages/modal.html' %} {% endcomment %}
-    {% extends 'estado/pages/ModalEstado.html' %}
-    {% block modal %}
-        <h1>teste</h1>
-    {% endblock  %}
-    <div class="main-content container consulta">           
-        <h1 class="title-list"><i class="fa-solid fa-map-location-dot"></i> ESTADOS</h1>      
-        <a href="{% url 'cadastrar-estado' %}"><button class="btn btn-primary">Adicionar</button></a>  
-        <hr>        
-
-        <table class="table table-striped">
+    <div style="font-size: 20px">
+        <table id="tablepais" class="table table-striped display fs-6" style="width:100%">
             <thead class="table-dark fs-5">
-                <tr>                
-                    <th scope="col">ID</th>                    
+                <tr>
+                    <th scope="col">ID</th>
                     <th scope="col">ESTADO</th>
                     <th scope="col">UF</th>
                     <th scope="col">PAÍS</th>
@@ -35,31 +29,21 @@
                     <td>{{estado.dt_cadastro}}</td>
                     <td>{{estado.dt_ult_alt}}</td>
                     <td>
-                        <button type="button" class="btn btn-sm btn-info" data-bs-toggle="modal" data-bs-target="#myModal" data-bs-url="{% url 'estado-view' pk=estado.id %}"><i class="fa-solid fa-eye"></i></button>
+                        <button type="button" class="btn btn-sm btn-info" data-bs-toggle="modal"
+                            data-bs-target="#myModal" data-bs-url="{% url 'estado-view' pk=estado.id %}"><i
+                                class="fa-solid fa-eye"></i></button>
                         |
-                        <a class="btn btn-sm btn-secondary" href="{% url 'consulta-estado' %}"><i class="fa-solid fa-pen"></i></a>
+                        <a class="btn btn-sm btn-secondary" href="{% url 'consulta-estado' %}"><i
+                                class="fa-solid fa-pen"></i></a>
                         |
-                        <a class="btn btn-sm btn-danger" href="{% url 'consulta-estado' %}"><i class="fa-solid fa-trash"></i></a>
+                        <a class="btn btn-sm btn-danger" href="{% url 'consulta-estado' %}"><i
+                                class="fa-solid fa-trash"></i></a>
                     </td>
-                    
+
                 </tr>
-            {% empty %}
-            <tr>
-                <td >Nenhum registro encontrado.</td>
-            </tr>
-            {% endfor %}                                        
-    </tbody>
-</table>   
-        
-
-
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
-    
-
-</body>
-
-{% include 'pages/footer.html' %}
-
-<script>{% include 'estado/partials/script.js' %}</script>
-
-</html>
+</div>
+{% endblock %}
