--- a/pais/templates/pais/pages/CadastroPais.html
+++ b/pais/templates/pais/pages/CadastroPais.html
@@ -1,14 +1,9 @@
-{% include 'pages/head.html' %}
+{% extends 'pages/cadastro.html' %}
 
-<body>
-    {% include 'pages/menu.html' %}
-    <div class="main-content container consulta">           
-        <h1>Cadastro de Países</h1>
-        {% include 'pages/cadastro.html' %}
-    </div>
+{% block title-cadastro %}Cadastro de Países{% endblock %}
 
-</body>
-
-{% include 'pages/footer.html' %}
-
-</html>
+{% block cadastro-content %}
+    {% csrf_token %}
+    {{ form.as_p }}    
+{% endblock %}
+{% block submit-btn %}CADASTRAR{% endblock  %}
