Estruturação do CBV

--- a/Sistema/templates/Sistema/pages/index.html
+++ b/Sistema/templates/Sistema/pages/index.html
@@ -1,12 +1,1 @@
-{% include 'pages/head.html' %}
-
-<body>
-
-    {% include 'pages/menu.html' %}
-   
-
-</body>
-
-{% include 'pages/footer.html' %}
-
-</html>
+{% extends 'pages/base.html' %}
