--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -4,44 +4,22 @@
     box-sizing: border-box;
 }
 
-html {
-    font-size: 62, 5%;
+mt-2{
+    margin: 2 0 0 0;
 }
 
-body {
-    font-size: 1.6rem;
-    background-color: gainsboro;
+mt-5 {
+    margin: 5 0 0 0;
 }
 
-
-
-
-.main-logo {
-    font-size: 38px;
-    color: white;
-    text-decoration: none;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: center;
-    width: fit-content;
-    margin: 0 auto;
+mb-2 {
+    margin: 0 0 0 2;
 }
 
-.main-header {
-    padding: 2px;
+w-100 {
+    width: 100px;
 }
 
-.main-content {
-
-    height: 800px; 
-
-}
-
-.title-list{
-    font-size: 26px;
-}
-
-.consulta{
-    margin-top: 20px;
+w-150 {
+    width: 150px;
 }
