--- a/pais/templates/pais/pages/ConsultaPais.html
+++ b/pais/templates/pais/pages/ConsultaPais.html
@@ -1,9 +1,57 @@
 {% extends 'pages/base.html' %}
 
+
+{% block title %}Países{% endblock  %}
+
+{% block modal %}
+    {{block.super}}
+    <div id="modalView" class="modal fade" data-bs-backdrop="static" tabindex="-1" aria-labelledby="modalViewLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="modalViewLabel"></h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                    </div>
+                    <div class="modal-body">     
+                        <div class="col-sm">
+                            <label for="id" style="display: inline-block">ID:</label>
+                            <input type="number" id="id" name="id" value="" class="form-control" disabled style="width: 60px; display: inline-block; margin-right: 50px">                           
+                           <label for="pais">País:</label>
+                           <input id="nm-pais" type="text" class="form-control" value="" name="pais" disabled style="width: 600px; display: inline-block">
+                        </div>
+                        <div class="row mb-2 mt-2">
+                            <div class="col-sm">
+                                <label for="dt-cad">Data de Cadastro:</label>
+                                <input id="dt-cad" type="datetime" class="form-control" value="" name="dt-cad" disabled style="width: 100px; display: inline-block">
+                            
+                                <label for="dt-alt">Data da Última Alteração:</label>
+                                <input id="dt-alt" type="datetime" class="form-control" value="" name="dt-alt" disabled style="width: 100px; display: inline-block">
+                            </div>
+                        </div>
+                        <div class="form-group">     
+                                                                  
+                        </div>
+                    </div>
+                    <div class="modal-footer">   
+                        <label for="dt-cad">Data de Cadastro:</label>
+                        <input id="dt-cad" type="datetime" class="form-control fs-6" value="" name="dt-cad" disabled>    
+                        <label for="dt-alt">Data da Última Alteração:</label>
+                        <input id="dt-alt" type="datetime" class="form-control" value="" name="dt-alt" disabled>
+                        
+
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+{% endblock  %}
+
 {% block content %}
-<div class="main-content container consulta">
+<div class="container mt-2">
     <h1 class="title-list"><i class="fa-solid fa-earth-americas"></i> PAÍSES</h1>
-    <a href="{% url 'cadastrar-pais' %}"><button class="btn btn-primary">Adicionar</button></a>
+    <a href="{% url 'pais:cadastrar-pais' %}"><button class="btn btn-primary">Adicionar</button></a>
     <hr>
     <div style="font-size: 20px">
         <table id="tablepais" class="table table-striped display fs-6" style="width:100%">
@@ -19,24 +67,20 @@
                 </tr>
             </thead>
             <tbody class="fs-5 table-light">
-                {% for pais in pais_list.all %}
+                {% for pais in object_list %}                
                 <tr>
-                    <th scope="row">{{pais.id}}</th>
-                    <td>{{pais.nm_pais}}</td>
-                    <td>{{pais.sigla}}</td>
-                    <td>{{pais.ddi}}</td>
-                    <td>{{pais.dt_cadastro}}</td>
-                    <td>{{pais.dt_ult_alt}}</td>
+                    <th scope="row">{{pais.0}}</th>
+                    <td>{{pais.1}}</td>
+                    <td>{{pais.2}}</td>
+                    <td>{{pais.3}}</td>
+                    <td>{{pais.4}}</td>
+                    <td>{{pais.5}}</td>
                     <td>
-                        <button type="button" class="btn btn-sm btn-info" data-bs-toggle="modal"
-                            data-bs-target="#myModal" data-bs-url="{% url 'pais-view' pk=pais.id %}"><i
+                        <button type="button" class="btn btn-sm btn-info" data-url="{% url 'pais:consulta-pais' pk=pais.0 %}" data-bs-toggle="modal" data-bs-target="#modaView"><i
                                 class="fa-solid fa-eye"></i></button>
                         |
-                        {% comment %} <button type="button" class="btn btn-sm btn-secondary" data-bs-toggle="modal"
-                            data-bs-target="#myModal" data-bs-url="{% url 'editar-pais' pk=pais.id %}"><i
-                                class="fa-solid fa-pen"></i></button> {% endcomment %}
-                        <a class="btn btn-sm btn-secondary" href="{% url 'editar-pais' pk=pais.id %}"><i
-                                class="fa-solid fa-pen"></i></a>
+                        <button type="button" class="btn btn-sm btn-secondary edit-pais" data-pk="{{ pais.0 }}"><i
+                                class="fa-solid fa-pen"></i></button>
                         |
                         <a class="btn btn-sm btn-danger" href="{% url 'consulta-estado' %}"><i
                                 class="fa-solid fa-trash"></i></a>
