--- a/pais/templates/pais/pages/ConsultaPais.html
+++ b/pais/templates/pais/pages/ConsultaPais.html
@@ -13,35 +13,24 @@
                         <h1 class="modal-title fs-5" id="modalViewLabel"></h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
                     </div>
-                    <div class="modal-body">     
+                    <div class="modal-body">                         
+                        <label for="id" style="display: inline-block">ID:</label>
+                        <input type="number" id="id" name="id" value="" class="form-control" disabled style="width: 60px; display: inline-block; margin-right: 50px">                           
+                        <label for="pais">País:</label>
+                        <input id="nm-pais" type="text" class="form-control" value="" name="pais" disabled style="width: 600px; display: inline-block">
                         <div class="col-sm">
-                            <label for="id" style="display: inline-block">ID:</label>
-                            <input type="number" id="id" name="id" value="" class="form-control" disabled style="width: 60px; display: inline-block; margin-right: 50px">                           
-                           <label for="pais">País:</label>
-                           <input id="nm-pais" type="text" class="form-control" value="" name="pais" disabled style="width: 600px; display: inline-block">
-                        </div>
-                        <div class="row mb-2 mt-2">
-                            <div class="col-sm">
-                                <label for="dt-cad">Data de Cadastro:</label>
-                                <input id="dt-cad" type="datetime" class="form-control" value="" name="dt-cad" disabled style="width: 100px; display: inline-block">
-                            
-                                <label for="dt-alt">Data da Última Alteração:</label>
-                                <input id="dt-alt" type="datetime" class="form-control" value="" name="dt-alt" disabled style="width: 100px; display: inline-block">
-                            </div>
-                        </div>
-                        <div class="form-group">     
-                                                                  
-                        </div>
+                            <label for="sigla">Sigla:</label>
+                            <input id="sigla" type="text" class="form-control" value="" name="sigla" disabled style="width: 60px; display: inline-block; margin-right: 30px; margin-top: 4px">
+                            <label for="ddi">DDI:</label>
+                            <input id="ddi" type="text" class="form-control" value="" name="ddi" disabled style="width: 70px; display: inline-block;">
+                        </div>                                                
                     </div>
                     <div class="modal-footer">   
                         <label for="dt-cad">Data de Cadastro:</label>
-                        <input id="dt-cad" type="datetime" class="form-control fs-6" value="" name="dt-cad" disabled>    
+                        <input id="dt-cad" type="datetime" class="form-control fs-6" value="" name="dt-cad" disabled style="width: 190px;">    
                         <label for="dt-alt">Data da Última Alteração:</label>
-                        <input id="dt-alt" type="datetime" class="form-control" value="" name="dt-alt" disabled>
-                        
-
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                        
+                        <input id="dt-alt" type="datetime" class="form-control fs-6" value="" name="dt-alt" disabled style="width: 190px;">                    
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>                        
                     </div>
                 </div>
             </div>
@@ -76,7 +65,7 @@
                     <td>{{pais.4}}</td>
                     <td>{{pais.5}}</td>
                     <td>
-                        <button type="button" class="btn btn-sm btn-info" data-url="{% url 'pais:consulta-pais' pk=pais.0 %}" data-bs-toggle="modal" data-bs-target="#modaView"><i
+                        <button type="button" class="btn btn-sm btn-info" data-url="{% url 'pais:consulta-pais' pk=pais.0 %}" data-bs-toggle="modal" data-bs-target="#modalView"><i
                                 class="fa-solid fa-eye"></i></button>
                         |
                         <button type="button" class="btn btn-sm btn-secondary edit-pais" data-pk="{{ pais.0 }}"><i
