--- a/pais/templates/pais/pages/ConsultaPais.html
+++ b/pais/templates/pais/pages/ConsultaPais.html
@@ -1,41 +1,47 @@
 {% extends 'pages/base.html' %}
 
 
-{% block title %}Países{% endblock  %}
+{% block title %}Países{% endblock %}
 
 {% block modal %}
-    {{block.super}}
-    <div id="modalView" class="modal fade" data-bs-backdrop="static" tabindex="-1" aria-labelledby="modalViewLabel"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-xl">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="modalViewLabel"></h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
-                    </div>
-                    <div class="modal-body">                         
-                        <label for="id" style="display: inline-block">ID:</label>
-                        <input type="number" id="id" name="id" value="" class="form-control" disabled style="width: 60px; display: inline-block; margin-right: 50px">                           
-                        <label for="pais">País:</label>
-                        <input id="nm-pais" type="text" class="form-control" value="" name="pais" disabled style="width: 600px; display: inline-block">
-                        <div class="col-sm">
-                            <label for="sigla">Sigla:</label>
-                            <input id="sigla" type="text" class="form-control" value="" name="sigla" disabled style="width: 60px; display: inline-block; margin-right: 30px; margin-top: 4px">
-                            <label for="ddi">DDI:</label>
-                            <input id="ddi" type="text" class="form-control" value="" name="ddi" disabled style="width: 70px; display: inline-block;">
-                        </div>                                                
-                    </div>
-                    <div class="modal-footer">   
-                        <label for="dt-cad">Data de Cadastro:</label>
-                        <input id="dt-cad" type="datetime" class="form-control fs-6" value="" name="dt-cad" disabled style="width: 190px;">    
-                        <label for="dt-alt">Data da Última Alteração:</label>
-                        <input id="dt-alt" type="datetime" class="form-control fs-6" value="" name="dt-alt" disabled style="width: 190px;">                    
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>                        
-                    </div>
+{{block.super}}
+<div id="modalView" class="modal fade" data-bs-backdrop="static" tabindex="-1" aria-labelledby="modalViewLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="modalViewLabel"></h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+            </div>
+            <div class="modal-body">
+                <label for="id" style="display: inline-block">ID:</label>
+                <input type="number" id="id" name="id" value="" class="form-control" disabled
+                    style="width: 60px; display: inline-block; margin-right: 50px">
+                <label for="pais">País:</label>
+                <input id="nm-pais" type="text" class="form-control" value="" name="pais" disabled
+                    style="width: 600px; display: inline-block">
+                <div class="col-sm">
+                    <label for="sigla">Sigla:</label>
+                    <input id="sigla" type="text" class="form-control" value="" name="sigla" disabled
+                        style="width: 60px; display: inline-block; margin-right: 30px; margin-top: 4px">
+                    <label for="ddi">DDI:</label>
+                    <input id="ddi" type="text" class="form-control" value="" name="ddi" disabled
+                        style="width: 70px; display: inline-block;">
                 </div>
             </div>
+            <div class="modal-footer">
+                <label for="dt-cad">Data de Cadastro:</label>
+                <input id="dt-cad" type="datetime" class="form-control fs-6" value="" name="dt-cad" disabled
+                    style="width: 190px;">
+                <label for="dt-alt">Data da Última Alteração:</label>
+                <input id="dt-alt" type="datetime" class="form-control fs-6" value="" name="dt-alt" disabled
+                    style="width: 190px;">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            </div>
         </div>
-{% endblock  %}
+    </div>
+</div>
+{% endblock %}
 
 {% block content %}
 <div class="container mt-2">
@@ -56,7 +62,7 @@
                 </tr>
             </thead>
             <tbody class="fs-5 table-light">
-                {% for pais in object_list %}                
+                {% for pais in object_list %}
                 <tr>
                     <th scope="row">{{pais.0}}</th>
                     <td>{{pais.1}}</td>
@@ -65,14 +71,15 @@
                     <td>{{pais.4}}</td>
                     <td>{{pais.5}}</td>
                     <td>
-                        <button type="button" class="btn btn-sm btn-info" data-url="{% url 'pais:consulta-pais' pk=pais.0 %}" data-bs-toggle="modal" data-bs-target="#modalView"><i
-                                class="fa-solid fa-eye"></i></button>
+                        <button type="button" class="btn btn-sm btn-info"
+                            data-url="{% url 'pais:consulta-pais' pk=pais.0 %}" data-bs-toggle="modal"
+                            data-bs-target="#modalView"><i class="fa-solid fa-eye"></i></button>
                         |
                         <button type="button" class="btn btn-sm btn-secondary edit-pais" data-pk="{{ pais.0 }}"><i
                                 class="fa-solid fa-pen"></i></button>
                         |
-                        <a class="btn btn-sm btn-danger" href="{% url 'consulta-estado' %}"><i
-                                class="fa-solid fa-trash"></i></a>
+                        {% comment %} <a class="btn btn-sm btn-danger" href="{% url 'consulta-estado' %}"><i
+                                class="fa-solid fa-trash"></i></a> {% endcomment %}
                     </td>
                     {% endfor %}
                 </tr>
